--- a/examples/chatssm/static/css/styles.css
+++ b/examples/chatssm/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #ffffff;
+    background: #fff;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     color: #2c3e50;
@@ -17,7 +17,7 @@ header {
     text-align: center;
     padding: 20px;
     background: #2980b9;
-    color: #ffffff;
+    color: #fff;
     width: 100%;
     border-bottom: 1px solid #2980b9;
 }
@@ -25,11 +25,11 @@ header {
 header label, header select {
     display: inline-block;
     margin-top: 10px;
-    color: #ffffff;
+    color: #fff;
 }
 
 header select {
-    color: #333333;
+    color: #333;
 }
 
 main {
@@ -54,14 +54,14 @@ main {
     background: #ecf0f1;
     color: #2c3e50;
     border-radius: 10px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 10%);
     height: 60vh;
 }
 
 .box {
     height: 100%;
     width: 100%;
-    background: #ffffff;
+    background: #fff;
     color: #2c3e50;
     border: 1px solid #bdc3c7;
     padding: 10px;
@@ -88,7 +88,7 @@ main {
 }
 
 select {
-    background: #ffffff;
+    background: #fff;
     color: #2c3e50;
     border: 1px solid #bdc3c7;
     padding: 5px;
